try and try again

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,14 @@
 src_dir         = .
 libdeps_dir     = .pio
 ;
+;
 ;default_envs    = disco_f100rb
-;default_envs    = disco_f407vg
-; for Original-disco_f407vg enviroment ONLY compile Demo proj 
-default_envs    = Original-disco_f407vg
+default_envs    = disco_f407vg
+; for Original-disco_f407vg enviroment ONLY compile Demo proj
+;default_envs    = Original-disco_f407vg
 ;
 ;for Demo
-build_dir       = Demo_Build
+;build_dir       = Demo_Build
 ;for BlinkingLight
 ;build_dir       = BlinkingLight_Build
 ;for Blinking_Light2
@@ -27,7 +28,7 @@ build_dir       = Demo_Build
 ;for Blinking_Light3
 ;build_dir       = Blinking_Light3_Build
 ;for Button_Light
-;build_dir       = Button_Light_Build
+build_dir       = Button_Light_Build
 #
 #
 #
@@ -64,7 +65,8 @@ board_build.mcu         = stm32f100rbt6
 board_build.f_cpu       = 24000000L
 lib_ldf_mode            = off
 lib_compat_mode         = off
-;This projects link script file (.ld) for STM32F100RBT6
+;This projects link script file (.ld) for STM32F100RBT6 has 128Kbytes FLASH or 131072 or 0x20000,
+; FLASH range: 0x08000000 - 0x0801FFFF; 0x08007000 - 0x0801FFFF (100 KiB of space for firmware)
 board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
 ;f100rb ia a medium-density value line for f100xx MCU use to run code
 build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB
@@ -101,7 +103,7 @@ monitor_speed           = 115200
 upload_protocol         = custom
 
 ;For Windows and Linux using stlink V1.6.0:
-;upload_command          = st-flash write $SOURCE 0x08000000
+upload_command          = st-flash write $SOURCE 0x08007000
 
 ;Debug setup
 debug_tool              = stlink
@@ -139,7 +141,7 @@ board_build.mcu         = stm32f407vgt6
 board_build.f_cpu       = 168000000L
 lib_ldf_mode            = off
 lib_compat_mode         = off
-;This projects link script file (.ld) for STM32F407VGT6
+;This projects link script file (.ld) for STM32F407VGT6, 1024KiB of FLASH or 1048576 or 0x100000; bootloader: 0x08000000 - 0x08007FFF; firmware: 0x08008000 - 0x08100000
 board_build.ldscript    = "STM32F407VGTX_FLASH.ld"
 ;
 build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_F407VG
@@ -175,32 +177,31 @@ src_filter              = ${common.default_src_filter}
                             -<BlinkingLight>
                             -<Blinking_Light2>
                             -<Blinking_Light3>
-                            -<Button_Light>
+                            +<Button_Light>
 lib_deps                = STM32F4xx_StdPeriph_Lib_V1.8.0_mod = https://github.com/GadgetAngel/STM32F4xx_StdPeriph_Lib_V1.8.0_mod.git
 lib_ignore              = STM32F4xx_StdPeriph_Lib_V1.8.0_mod
 lib_archive             = no
 monitor_speed           = 115200
 upload_protocol         = custom
 
-;For Windows and Linux using stlink V1.6.0:
+;For Windows and Linux using stlink V1.6.0 firmware.bin starts at address 0x08008000 for STM32F407xx:
 upload_command          = st-flash write $SOURCE 0x08008000
 
 ;Debug setup
 debug_tool              = stlink
 ;for Demo
-debug_init_break        = break inc if i > 100
+;debug_init_break        = break inc if i > 100
 ;for BlinkingLight
 ;debug_init_break        = break inc if n > 40
 ;for Blinking_Light2
 ;debug_init_break        = break inc if ledval > 40
 ;for Blinking_Light3
 ;debug_init_break        = break inc if ledval > 40
-;for Button_Light
-;debug_init_break        = break main.c:144 if button_value = 1
+;for Button_Light if button_value = 0
+debug_init_break        = break main.c:166
 debug_port              = localhost:3333
 debug_load_mode         = always
 debug_load_cmds         = preload
-;debug_load_cmds         = load
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
   $INIT_BREAK
