fixed problem with GPIOToggle project

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,12 @@ src_dir         = .
 libdeps_dir     = .pio
 ;
 ;
-;default_envs    = disco_f100rb
-default_envs    = disco_f407vg
+default_envs    = disco_f100rb
+;default_envs    = disco_f407vg
 ;for Original-disco_f407vg enviroment ONLY compile Demo proj
 ;default_envs    = Original-disco_f407vg
 ;
+;for BOTH disco_f100rb and disco_f407vg environments
 ;for Demo
 ;build_dir       = Demo_Build
 ;for BlinkingLight
@@ -29,9 +30,13 @@ default_envs    = disco_f407vg
 ;build_dir       = Blinking_Light3_Build
 ;for Button_Light
 ;build_dir       = Button_Light_Build
+; end of for BOTH disco_f100rb and disco_f407vg environments
 ;
-; ONLY for disco_f407vg environment
-build_dir        = GPIO_IOToggle_Build
+; ONLY for disco_f407vg environment --the program name is GPIO_IOToggle
+;build_dir        = GPIO_IOToggle_Build
+;
+; ONLY for disco_f100rb environment --the program name is GPIOToggle
+build_dir         = f100rb_GPIOToggle_Build
 ;
 #
 #
@@ -43,7 +48,8 @@ default_src_filter  =
     +<*>
     -<Docs>
     -<include>
-    -<F4-Backup-bootloader-and-firmware>
+    -<F4-Backup-firmware-files>
+    -<F1-Backup-firmware-files>
 ;
 ; For Both Linux and Windows 10:
 build_flags =
@@ -52,11 +58,10 @@ build_flags =
     ;-O1
     ;when debugging
     ;https://gcc.gnu.org/onlinedocs/gcc/Debugging-Options.html for gcc options
-    -O0 -g3 -ggdb3
+    -O0 -g3 -ggdb3 -falign-functions=4
     ; for BOTH Linux and Windows 10:
     -DUSE_STDPERIPH_DRIVER
     -DUSE_FULL_ASSERT
-    -I"."
 #
 #
 # Discovery board: STM32VLDISCOERY
@@ -73,34 +78,59 @@ lib_compat_mode         = off
 ; FLASH range: 0x08000000 - 0x0801FFFF; 0x08007000 - 0x0801FFFF (100 KiB of space for firmware)
 board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
 ;f100rb ia a medium-density value line for f100xx MCU use to run code
+                            ; beginning of not used section
+;build_unflags           = -mcpu=cortex-m3
+                            ; end of not used section
 build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB
+                            ; beginning of not used section
+                            ;-mcpu=cortex-m4
+                            ; end of not used section
                             -I".pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x"
                             -I".pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/inc"
+                            -I"."
+                            ; beginning of not used section
                             ;
                             ;for Both Windows and Linux:
                             ; for other modules that might need to be accessed later:
                             ;-I"Library/ff9/src"
                             ; for other modules that might need to be accessed later:
                             ;-I"Library"
+                            ; end of not used section
 src_filter              = ${common.default_src_filter}
+                            ; then next 5 lines can be ignored
+                            ;for Linux
+                            ;-<../../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
+                            ;for Windows
+                            ;-<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates>
+                            ;+<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\system_stm32f1xx.c>
+                            ;
+                            ;for Both Linux and Windows
                             +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle>
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/Documentation>
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/STM32F10x>
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/_htmresc>
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle/stm32f10x_it.c>
                             ;
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/CMSIS/CM3/CoreSupport>
                             ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
-                            -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_gpio.c>
-                            -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c>
+                            -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_exti.c>
+                            -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/misc.c>
                             -<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_usart.c>
+                            +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_gpio.c>
+                            +<.pio/disco_f100rb/STM32F10x_StdPeriph_Lib_V3.5.0_mod/Libraries/STM32F10x_StdPeriph_Driver/src/stm32f10x_rcc.c>
                             -<Library>
-                            +<Demo>
+                            ;
+                            -<Demo>
                             -<BlinkingLight>
                             -<Blinking_Light2>
                             -<Blinking_Light3>
                             -<Button_Light>
+                            ;This is GPIO_IOToggle
                             -<GPIO_IOToggle>
+                            ;This is GPIOToggle
+                            +<STM32VLDiscovery-board-original-SW/GPIOToggle>
 lib_deps                = STM32F10x_StdPeriph_Lib_V3.5.0_mod = https://github.com/GadgetAngel/STM32F10x_StdPeriph_Lib_V3.5.0_mod.git
 lib_ignore              = STM32F10x_StdPeriph_Lib_V3.5.0_mod
 lib_archive             = no
@@ -122,6 +152,8 @@ debug_tool              = stlink
 ;debug_init_break        = break inc if ledval > 40
 ;for Button_Light
 ;debug_init_break        = break main.c:74 if button_value = 1
+;for GPIOToggle
+debug_init_break        = break main.c:74 if counter32 > 40
 debug_port              = localhost:3333
 debug_load_mode         = always
 debug_load_cmds         = preload
@@ -150,20 +182,26 @@ lib_compat_mode         = off
 board_build.ldscript    = "STM32F407VGTX_FLASH.ld"
 ;
 build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_F407VG
+                            ; beginning not used section
+                            ;-mcpu=cortex-m4 -mthumb
                             ;-std=gnu++14
                             ;-DUSBCON -DUSBD_USE_CDC
                             ;-DTIM_IRQ_PRIO=13
+                            ; end of not used section
                             -I".pio/disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/CMSIS/Device/ST/STM32F4xx/include"
                             -I".pio/disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/STM32F4xx_StdPeriph_Driver/inc"
+                            -I"."
                             ;
                             -I"GPIO_IOToggle"
                             ;
+                            ; beginning of not used section
                             ;for Both Windows and Linux:
                             ; for other modules that might need to be accessed later:
                             ;-I"Library/ff9/src"
                             ; for other modules that might need to be accessed later:
                             ;-I"Library"
 ;build_unflags           = -std=gnu++11
+                            ; end of not used section
 src_filter              = ${common.default_src_filter}
                             +<.pio/disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod>
                             -<.pio/disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates>
@@ -236,18 +274,24 @@ lib_compat_mode         = off
 board_build.ldscript    = "STM32F407VGTX_FLASH.ld"
 ;
 build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_F407VG
+                            ; beginning of not used section
+                            ;-mcpu=cortex-m4 -mthumb
                             ;-std=gnu++14
                             ;-DUSBCON -DUSBD_USE_CDC
                             ;-DTIM_IRQ_PRIO=13
+                            ; end of not used section
                             -I".pio/Original-disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/CMSIS/Device/ST/STM32F4xx/include"
                             -I".pio/Original-disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/STM32F4xx_StdPeriph_Driver/inc"
+                            -I"."
                             ;
+                            ; beginning of not used section
                             ;for Both Windows and Linux:
                             ; for other modules that might need to be accessed later:
                             ;-I"Library/ff9/src"
                             ; for other modules that might need to be accessed later:
                             ;-I"Library"
 ;build_unflags           = -std=gnu++11
+                            ; ending of not used section
 src_filter              = ${common.default_src_filter}
                             +<.pio/Original-disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod>
                             -<.pio/Original-disco_f407vg/STM32F4xx_StdPeriph_Lib_V1.8.0_mod/Libraries/CMSIS/Device/ST/STM32F4xx/Source/Templates>
