--- a/platformio.ini
+++ b/platformio.ini
@@ -18,10 +18,11 @@ default_envs    = disco_f100rb
 ;default_envs    = disco_f407vg
 ;for Original-disco_f407vg enviroment ONLY compile Demo proj
 ;default_envs    = Original-disco_f407vg
+;default_envs     = nucleo_l4xx
 ;
 ;for BOTH disco_f100rb and disco_f407vg environments
 ;for Demo
-;build_dir       = Demo_Build
+build_dir       = Demo_Build
 ;for BlinkingLight
 ;build_dir       = BlinkingLight_Build
 ;for Blinking_Light2
@@ -36,7 +37,7 @@ default_envs    = disco_f100rb
 ;build_dir        = GPIO_IOToggle_Build
 ;
 ; ONLY for disco_f100rb environment --the program name is GPIOToggle
-build_dir         = f100rb_GPIOToggle_Build
+;build_dir         = f100rb_GPIOToggle_Build
 ;
 #
 #
@@ -50,6 +51,7 @@ default_src_filter  =
     -<include>
     -<F4-Backup-firmware-files>
     -<F1-Backup-firmware-files>
+    -<L4-Backup-firmware-files>
 ;
 ; For Both Linux and Windows 10:
 build_flags =
