--- a/platformio.ini
+++ b/platformio.ini
@@ -22,7 +22,7 @@ default_envs    = disco_f100rb
 ;
 ;for BOTH disco_f100rb and disco_f407vg environments
 ;for Demo
-build_dir       = Demo_Build
+;build_dir       = Demo_Build
 ;for BlinkingLight
 ;build_dir       = BlinkingLight_Build
 ;for Blinking_Light2
@@ -37,7 +37,7 @@ build_dir       = Demo_Build
 ;build_dir        = GPIO_IOToggle_Build
 ;
 ; ONLY for disco_f100rb environment --the program name is GPIOToggle
-;build_dir         = f100rb_GPIOToggle_Build
+build_dir         = f100rb_GPIOToggle_Build
 ;
 #
 #
@@ -139,8 +139,10 @@ lib_archive             = no
 monitor_speed           = 115200
 upload_protocol         = custom
 
+;for Windows using ST-LINK_cli:
+upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
 ;For Windows and Linux using stlink V1.6.0:
-upload_command          = st-flash write $SOURCE 0x08000000
+;upload_command          = st-flash write $SOURCE 0x08000000
 
 ;Debug setup
 debug_tool              = stlink
