--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@ default_envs    = disco_f100rb
 ;default_envs    = disco_f407vg
 ;for Original-disco_f407vg enviroment ONLY compile Demo proj
 ;default_envs    = Original-disco_f407vg
-;default_envs     = nucleo_l4xx
+;default_envs     = nucleo_l433rc_p
+;default_envs     = nucleo_f767zi
 ;
 ;for BOTH disco_f100rb and disco_f407vg environments
 ;for Demo
@@ -77,7 +78,7 @@ board_build.f_cpu       = 24000000L
 lib_ldf_mode            = off
 lib_compat_mode         = off
 ;This projects link script file (.ld) for STM32F100RBT6 has 128Kbytes FLASH or 131072 or 0x20000,
-; FLASH range: 0x08000000 - 0x0801FFFF; 0x08007000 - 0x0801FFFF (100 KiB of space for firmware)
+;
 board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
 ;f100rb ia a medium-density value line for f100xx MCU use to run code
                             ; beginning of not used section
@@ -351,3 +352,217 @@ debug_init_cmds =
   monitor reset halt
   interrupt
   continue
+#
+#
+# Discovery board: STM32L433 Nucleo-64 board (Nucleo-L433RC-P)
+#
+[env:nucleo_l433rc_p]
+platform                = ststm32
+board                   = nucleo_l433rc_p
+framework               = cmsis
+board_build.mcu         = stm32l433rc
+board_build.f_cpu       = 80000000L
+lib_ldf_mode            = off
+lib_compat_mode         = off
+;This projects link script file (.ld) for STM32L433RC has 256KB FLASH or 262144 or 0x40000,
+;
+board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
+;f100rb ia a medium-density value line for f100xx MCU use to run code
+                            ; beginning of not used section
+;build_unflags           = -mcpu=cortex-m3
+                            ; end of not used section
+build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB
+                            ; beginning of not used section
+                            ;-mcpu=cortex-m4
+                            ; end of not used section
+                            -I".pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/CMSIS/Device/ST/STM32L4xx/include"
+                            -I".pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/inc"
+                            -I"."
+                            ; beginning of not used section
+                            ;
+                            ;for Both Windows and Linux:
+                            ; for other modules that might need to be accessed later:
+                            ;-I"Library/ff9/src"
+                            ; for other modules that might need to be accessed later:
+                            ;-I"Library"
+                            ; end of not used section
+src_filter              = ${common.default_src_filter}
+                            ; then next 5 lines can be ignored
+                            ;for Linux
+                            ;-<../../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
+                            ;for Windows
+                            ;-<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates>
+                            ;+<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\system_stm32f1xx.c>
+                            ;
+                            ;for Both Linux and Windows
+                            +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/xxxxxxx>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/Device/ST/STM32L4xx>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/_htmresc>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle/stm32f10x_it.c>
+                            ;
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Libraries/CMSIS/Device/ST/STM32L4xx/xxxxxxx>
+                            ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxxstm32f10x_exti.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxmisc.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_usart.c>
+                            +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_gpio.c>
+                            +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_rcc.c>
+                            -<Library>
+                            ;
+                            -<Demo>
+                            -<BlinkingLight>
+                            -<Blinking_Light2>
+                            -<Blinking_Light3>
+                            -<Button_Light>
+                            ;This is GPIO_IOToggle
+                            -<GPIO_IOToggle>
+                            ;This is GPIOToggle
+                            +<STM32VLDiscovery-board-original-SW/GPIOToggle>
+lib_deps                = STM32L4xx_StdPeriph_Lib_V1.16.0_mod = https://github.com/GadgetAngel/STM32L4xx_StdPeriph_Lib_V1.16.0_mod.git
+lib_ignore              = STM32L4xx_StdPeriph_Lib_V1.16.0_mod
+lib_archive             = no
+monitor_speed           = 115200
+upload_protocol         = custom
+
+;for Windows using ST-LINK_cli:
+upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
+;For Windows and Linux using stlink V1.6.0:
+;upload_command          = st-flash write $SOURCE 0x08000000
+
+;Debug setup
+debug_tool              = stlink
+;for Demo
+;debug_init_break        = break inc if i > 40
+;for BlinkingLight
+;debug_init_break        = break inc if n > 40
+;for Blinking_Light2
+;debug_init_break        = break inc if ledval > 40
+;for Blinking_Light3
+;debug_init_break        = break inc if ledval > 40
+;for Button_Light
+;debug_init_break        = break main.c:74 if button_value = 1
+;for GPIOToggle
+debug_init_break        = break main.c:74 if counter32 > 40
+debug_port              = localhost:3333
+debug_load_mode         = always
+debug_load_cmds         = preload
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  $INIT_BREAK
+  monitor reset halt
+  $LOAD_CMDS
+  monitor init
+  monitor reset halt
+  interrupt
+  continue
+#
+#
+#
+# Discovery board: STM32F767 Nucleo-144 Board, (Nucleo-F767ZI)
+#
+[env:nucleo_f767zi]
+platform                = ststm32
+board                   = nucleo_f767zi
+framework               = cmsis
+board_build.mcu         = stm32f767zit6
+board_build.f_cpu       = 216000000L
+lib_ldf_mode            = off
+lib_compat_mode         = off
+;This projects link script file (.ld) for STM32F767ZIT6 has 2MB FLASH or 2097152 or 0x200000,
+;
+board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
+;f100rb ia a medium-density value line for f100xx MCU use to run code
+                            ; beginning of not used section
+;build_unflags           = -mcpu=cortex-m3
+                            ; end of not used section
+build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB
+                            ; beginning of not used section
+                            ;-mcpu=cortex-m4
+                            ; end of not used section
+                            -I".pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/xxxxx"
+                            -I".pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/inc"
+                            -I"."
+                            ; beginning of not used section
+                            ;
+                            ;for Both Windows and Linux:
+                            ; for other modules that might need to be accessed later:
+                            ;-I"Library/ff9/src"
+                            ; for other modules that might need to be accessed later:
+                            ;-I"Library"
+                            ; end of not used section
+src_filter              = ${common.default_src_filter}
+                            ; then next 5 lines can be ignored
+                            ;for Linux
+                            ;-<../../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
+                            ;for Windows
+                            ;-<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates>
+                            ;+<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\system_stm32f1xx.c>
+                            ;
+                            ;for Both Linux and Windows
+                            +<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/CMSIS/Documentation>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/CMSIS/CM3/DeviceSupport/ST/xxxxxx>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/_htmresc>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle/stm32f10x_it.c>
+                            ;
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/CMSIS/CM3/CoreSupport>
+                            ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxstm32f10x_exti.c>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxxmisc.c>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxxstm32f10x_usart.c>
+                            +<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxstm32f10x_gpio.c>
+                            +<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxxstm32f10x_rcc.c>
+                            -<Library>
+                            ;
+                            -<Demo>
+                            -<BlinkingLight>
+                            -<Blinking_Light2>
+                            -<Blinking_Light3>
+                            -<Button_Light>
+                            ;This is GPIO_IOToggle
+                            -<GPIO_IOToggle>
+                            ;This is GPIOToggle
+                            +<STM32VLDiscovery-board-original-SW/GPIOToggle>
+lib_deps                = STM32F7xx_StdPeriph_Lib_Vxxx_mod = https://github.com/GadgetAngel/STM32F7xx_StdPeriph_Lib_Vxxx_mod.git
+lib_ignore              = STM32F7xx_StdPeriph_Lib_Vxxx_mod
+lib_archive             = no
+monitor_speed           = 115200
+upload_protocol         = custom
+
+;for Windows using ST-LINK_cli:
+upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
+;For Windows and Linux using stlink V1.6.0:
+;upload_command          = st-flash write $SOURCE 0x08000000
+
+;Debug setup
+debug_tool              = stlink
+;for Demo
+;debug_init_break        = break inc if i > 40
+;for BlinkingLight
+;debug_init_break        = break inc if n > 40
+;for Blinking_Light2
+;debug_init_break        = break inc if ledval > 40
+;for Blinking_Light3
+;debug_init_break        = break inc if ledval > 40
+;for Button_Light
+;debug_init_break        = break main.c:74 if button_value = 1
+;for GPIOToggle
+debug_init_break        = break main.c:74 if counter32 > 40
+debug_port              = localhost:3333
+debug_load_mode         = always
+debug_load_cmds         = preload
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  $INIT_BREAK
+  monitor reset halt
+  $LOAD_CMDS
+  monitor init
+  monitor reset halt
+  interrupt
+  continue
+
