got live DEBUG working with custom GDB for windows

--- a/platformio.ini
+++ b/platformio.ini
@@ -142,11 +142,22 @@ upload_protocol         = custom
 
 ;for Windows using ST-LINK_cli:
 upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
-;For Windows and Linux using stlink V1.6.0:
+;For Linux using stlink V1.6.0:
 ;upload_command          = st-flash write $SOURCE 0x08000000
 
 ;Debug setup
-debug_tool              = stlink
+
+;For Linux:
+;debug_tool              = stlink
+;use the default debug_server
+
+;For Windows ONLY:
+debug_tool              = custom
+debug_port              = localhost:62230
+;openocd -f interface/stlink-v2-1.cfg -c "reset_config none" -f target/stm32f1x.cfg
+debug_server =
+  C:\ST\STM32CubeIDE_1.5.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.stlink-gdb-server.win32_1.5.0.202011040924\tools\bin\ST-LINK_gdbserver.bat
+
 ;for Demo
 ;debug_init_break        = break inc if i > 40
 ;for BlinkingLight
@@ -159,18 +170,13 @@ debug_tool              = stlink
 ;debug_init_break        = break main.c:74 if button_value = 1
 ;for GPIOToggle
 debug_init_break        = break main.c:74 if counter32 > 40
-debug_port              = localhost:3333
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
-  $INIT_BREAK
-  monitor reset halt
+  monitor reset
   $LOAD_CMDS
-  monitor init
-  monitor reset halt
-  interrupt
-  continue
+  $INIT_BREAK
 #
 #
 #  Discovery board: STM32F4DISCOVERY
@@ -235,33 +241,42 @@ lib_archive             = no
 monitor_speed           = 115200
 upload_protocol         = custom
 
-;For Windows and Linux using stlink V1.6.0 firmware.bin starts at address 0x08008000 for STM32F407xx:
-upload_command          = st-flash write $SOURCE 0x08000000
+;for Windows using ST-LINK_cli:
+upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
+;For Linux using stlink V1.6.0:
+;upload_command          = st-flash write $SOURCE 0x08000000
 
 ;Debug setup
-debug_tool              = stlink
+;For Linux:
+;debug_tool              = stlink
+;use the default debug_server
+
+;For Windows ONLY:
+debug_tool              = custom
+debug_port              = localhost:62230
+;openocd -f interface/stlink-v2.cfg -c "reset_config none" -f target/stm32f4x.cfg
+debug_server =
+  C:\ST\STM32CubeIDE_1.5.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.stlink-gdb-server.win32_1.5.0.202011040924\tools\bin\ST-LINK_gdbserver.bat
+
 ;for Demo
-;debug_init_break        = break inc if i > 100
+;debug_init_break        = break inc if i > 40
 ;for BlinkingLight
 ;debug_init_break        = break inc if n > 40
 ;for Blinking_Light2
 ;debug_init_break        = break inc if ledval > 40
 ;for Blinking_Light3
 ;debug_init_break        = break inc if ledval > 40
-;for Button_Light if button_value = 0
-;debug_init_break        = break main.c:166
-debug_port              = localhost:3333
+;for Button_Light
+;debug_init_break        = break main.c:74 if button_value = 1
+;for GPIOToggle
+debug_init_break        = break main.c:74 if counter32 > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
-;debug_init_cmds =
-  ;target extended-remote $DEBUG_PORT
-  ;$INIT_BREAK
-  ;monitor reset halt
-  ;$LOAD_CMDS
-  ;monitor init
-  ;monitor reset halt
-  ;interrupt
-  ;continue
+debug_init_cmds =
+  target extended-remote $DEBUG_PORT
+  monitor reset
+  $LOAD_CMDS
+  $INIT_BREAK
 
 #
 #
@@ -325,13 +340,25 @@ lib_archive             = no
 monitor_speed           = 115200
 upload_protocol         = custom
 
-;For Windows and Linux using stlink V1.6.0:
-upload_command          = st-flash --format ihex write C:/Firmware/Git_Repo/STM32_Template/F4-Backup-bootloader-and-firmware/bootloader-and-firmware.hex
+;for Windows using ST-LINK_cli:
+upload_command          = st-link_cli -c ID=0 SWD -P C:\Firmware\Git_Repo\STM32_Template\F4-Backup-bootloader-and-firmware\bootloader-and-firmware.hex
+;For Linux using stlink V1.6.0:
+;upload_command          = st-flash --format ihex write C:/Firmware/Git_Repo/STM32_Template/F4-Backup-bootloader-and-firmware/bootloader-and-firmware.hex
 
 ;Debug setup
-debug_tool              = stlink
+;For Linux:
+;debug_tool              = stlink
+;use the default debug_server
+
+;For Windows ONLY:
+debug_tool              = custom
+debug_port              = localhost:62230
+;openocd -f interface/stlink-v2.cfg -c "reset_config none" -f target/stm32f4x.cfg
+debug_server =
+  C:\ST\STM32CubeIDE_1.5.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.stlink-gdb-server.win32_1.5.0.202011040924\tools\bin\ST-LINK_gdbserver.bat
+
 ;for Demo
-debug_init_break        = break inc if i > 100
+;debug_init_break        = break inc if i > 40
 ;for BlinkingLight
 ;debug_init_break        = break inc if n > 40
 ;for Blinking_Light2
@@ -339,19 +366,16 @@ debug_init_break        = break inc if i > 100
 ;for Blinking_Light3
 ;debug_init_break        = break inc if ledval > 40
 ;for Button_Light
-;debug_init_break        = break main.c:144 if button_value = 1
-debug_port              = localhost:3333
+;debug_init_break        = break main.c:74 if button_value = 1
+;for GPIOToggle
+debug_init_break        = break main.c:74 if counter32 > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
-  $INIT_BREAK
-  monitor reset halt
+  monitor reset
   $LOAD_CMDS
-  monitor init
-  monitor reset halt
-  interrupt
-  continue
+  $INIT_BREAK
 #
 #
 # Discovery board: STM32L433 Nucleo-64 board (Nucleo-L433RC-P)
@@ -429,11 +453,21 @@ upload_protocol         = custom
 
 ;for Windows using ST-LINK_cli:
 upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
-;For Windows and Linux using stlink V1.6.0:
+;For Linux using stlink V1.6.0:
 ;upload_command          = st-flash write $SOURCE 0x08000000
 
 ;Debug setup
-debug_tool              = stlink
+;For Linux:
+;debug_tool              = stlink
+;use the default debug_server
+
+;For Windows ONLY:
+debug_tool              = custom
+debug_port              = localhost:62230
+;openocd -f interface/stlink-v2.cfg -c "reset_config none" -f target/stm32l4x.cfg
+debug_server =
+  C:\ST\STM32CubeIDE_1.5.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.stlink-gdb-server.win32_1.5.0.202011040924\tools\bin\ST-LINK_gdbserver.bat
+
 ;for Demo
 ;debug_init_break        = break inc if i > 40
 ;for BlinkingLight
@@ -446,18 +480,13 @@ debug_tool              = stlink
 ;debug_init_break        = break main.c:74 if button_value = 1
 ;for GPIOToggle
 debug_init_break        = break main.c:74 if counter32 > 40
-debug_port              = localhost:3333
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
-  $INIT_BREAK
-  monitor reset halt
+  monitor reset
   $LOAD_CMDS
-  monitor init
-  monitor reset halt
-  interrupt
-  continue
+  $INIT_BREAK
 #
 #
 #
@@ -536,11 +565,21 @@ upload_protocol         = custom
 
 ;for Windows using ST-LINK_cli:
 upload_command          = st-link_cli -c ID=0 SWD -P $SOURCE 0x08000000
-;For Windows and Linux using stlink V1.6.0:
+;For Linux using stlink V1.6.0:
 ;upload_command          = st-flash write $SOURCE 0x08000000
 
 ;Debug setup
-debug_tool              = stlink
+;For Linux:
+;debug_tool              = stlink
+;use the default debug_server
+
+;For Windows ONLY:
+debug_tool              = custom
+debug_port              = localhost:62230
+;openocd -f interface/stlink-v2.cfg -c "reset_config none" -f target/stm32f7x.cfg
+debug_server =
+  C:\ST\STM32CubeIDE_1.5.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.stlink-gdb-server.win32_1.5.0.202011040924\tools\bin\ST-LINK_gdbserver.bat
+
 ;for Demo
 ;debug_init_break        = break inc if i > 40
 ;for BlinkingLight
@@ -553,16 +592,11 @@ debug_tool              = stlink
 ;debug_init_break        = break main.c:74 if button_value = 1
 ;for GPIOToggle
 debug_init_break        = break main.c:74 if counter32 > 40
-debug_port              = localhost:3333
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
   target extended-remote $DEBUG_PORT
-  $INIT_BREAK
-  monitor reset halt
+  monitor reset
   $LOAD_CMDS
-  monitor init
-  monitor reset halt
-  interrupt
-  continue
+  $INIT_BREAK
 
