--- a/platformio.ini
+++ b/platformio.ini
@@ -268,8 +268,9 @@ debug_server =
 ;debug_init_break        = break inc if ledval > 40
 ;for Button_Light
 ;debug_init_break        = break main.c:74 if button_value = 1
-;for GPIOToggle
-debug_init_break        = break main.c:74 if counter32 > 40
+;for GPIO_IOToggle
+debug_init_break        = break main.c:166
+;
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
@@ -358,7 +359,7 @@ debug_server =
   C:\ST\STM32CubeIDE_1.5.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.stlink-gdb-server.win32_1.5.0.202011040924\tools\bin\ST-LINK_gdbserver.bat
 
 ;for Demo
-;debug_init_break        = break inc if i > 40
+debug_init_break        = break inc if i > 40
 ;for BlinkingLight
 ;debug_init_break        = break inc if n > 40
 ;for Blinking_Light2
@@ -367,8 +368,9 @@ debug_server =
 ;debug_init_break        = break inc if ledval > 40
 ;for Button_Light
 ;debug_init_break        = break main.c:74 if button_value = 1
-;for GPIOToggle
-debug_init_break        = break main.c:74 if counter32 > 40
+;for GPIO_IOToggle
+;debug_init_break        = break main.c:166
+;
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
@@ -390,8 +392,8 @@ lib_ldf_mode            = off
 lib_compat_mode         = off
 ;This projects link script file (.ld) for STM32L433RC has 256KB FLASH or 262144 or 0x40000,
 ;
-board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
-;f100rb ia a medium-density value line for f100xx MCU use to run code
+board_build.ldscript    = "STM32xxxxxx_FLASH_MOD.ld"
+;
                             ; beginning of not used section
 ;build_unflags           = -mcpu=cortex-m3
                             ; end of not used section
@@ -411,12 +413,6 @@ build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL 
                             ;-I"Library"
                             ; end of not used section
 src_filter              = ${common.default_src_filter}
-                            ; then next 5 lines can be ignored
-                            ;for Linux
-                            ;-<../../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
-                            ;for Windows
-                            ;-<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates>
-                            ;+<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\system_stm32f1xx.c>
                             ;
                             ;for Both Linux and Windows
                             +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod>
@@ -432,8 +428,8 @@ src_filter              = ${common.default_src_filter}
                             -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxxstm32f10x_exti.c>
                             -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxmisc.c>
                             -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_usart.c>
-                            +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_gpio.c>
-                            +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_rcc.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_gpio.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_rcc.c>
                             -<Library>
                             ;
                             -<Demo>
@@ -444,7 +440,7 @@ src_filter              = ${common.default_src_filter}
                             ;This is GPIO_IOToggle
                             -<GPIO_IOToggle>
                             ;This is GPIOToggle
-                            +<STM32VLDiscovery-board-original-SW/GPIOToggle>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle>
 lib_deps                = STM32L4xx_StdPeriph_Lib_V1.16.0_mod = https://github.com/GadgetAngel/STM32L4xx_StdPeriph_Lib_V1.16.0_mod.git
 lib_ignore              = STM32L4xx_StdPeriph_Lib_V1.16.0_mod
 lib_archive             = no
@@ -479,7 +475,7 @@ debug_server =
 ;for Button_Light
 ;debug_init_break        = break main.c:74 if button_value = 1
 ;for GPIOToggle
-debug_init_break        = break main.c:74 if counter32 > 40
+debug_init_break        = break main.c:74 if xxxxxxxxx > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
@@ -502,12 +498,11 @@ lib_ldf_mode            = off
 lib_compat_mode         = off
 ;This projects link script file (.ld) for STM32F767ZIT6 has 2MB FLASH or 2097152 or 0x200000,
 ;
-board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
-;f100rb ia a medium-density value line for f100xx MCU use to run code
+board_build.ldscript    = "STM32F700xxX_FLASH_MOD.ld"
                             ; beginning of not used section
 ;build_unflags           = -mcpu=cortex-m3
                             ; end of not used section
-build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB
+build_flags             = ${common.build_flags} -Dxxxxxx -Dxxxxxx -Dxxxxxxxxx
                             ; beginning of not used section
                             ;-mcpu=cortex-m4
                             ; end of not used section
@@ -523,12 +518,6 @@ build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL 
                             ;-I"Library"
                             ; end of not used section
 src_filter              = ${common.default_src_filter}
-                            ; then next 5 lines can be ignored
-                            ;for Linux
-                            ;-<../../.platformio/packages/framework-cmsis-stm32f1/Source/Templates/gcc/startup_stm32f100xb.s>
-                            ;for Windows
-                            ;-<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates>
-                            ;+<..\..\.platformio\packages\framework-cmsis-stm32f1\Source\Templates\system_stm32f1xx.c>
                             ;
                             ;for Both Linux and Windows
                             +<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod>
@@ -544,8 +533,8 @@ src_filter              = ${common.default_src_filter}
                             -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxstm32f10x_exti.c>
                             -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxxmisc.c>
                             -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxxstm32f10x_usart.c>
-                            +<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxstm32f10x_gpio.c>
-                            +<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxxstm32f10x_rcc.c>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxstm32f10x_gpio.c>
+                            -<.pio/nucleo_f767zi/STM32F7xx_StdPeriph_Lib_Vxxx_mod/Libraries/STM32xxxx_StdPeriph_Driver/src/xxxxstm32f10x_rcc.c>
                             -<Library>
                             ;
                             -<Demo>
@@ -556,7 +545,7 @@ src_filter              = ${common.default_src_filter}
                             ;This is GPIO_IOToggle
                             -<GPIO_IOToggle>
                             ;This is GPIOToggle
-                            +<STM32VLDiscovery-board-original-SW/GPIOToggle>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle>
 lib_deps                = STM32F7xx_StdPeriph_Lib_Vxxx_mod = https://github.com/GadgetAngel/STM32F7xx_StdPeriph_Lib_Vxxx_mod.git
 lib_ignore              = STM32F7xx_StdPeriph_Lib_Vxxx_mod
 lib_archive             = no
@@ -591,7 +580,7 @@ debug_server =
 ;for Button_Light
 ;debug_init_break        = break main.c:74 if button_value = 1
 ;for GPIOToggle
-debug_init_break        = break main.c:74 if counter32 > 40
+debug_init_break        = break main.c:xxxxx if xxxxxxx > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
