Trying to Add STM32L433 Mcu

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,11 +24,11 @@ default_envs     = nucleo_l433rc_p
 ;
 ;for BOTH disco_f100rb and disco_f407vg environments
 ;for Demo
-build_dir       = Demo_Build
+;build_dir       = Demo_Build
 ;for BlinkingLight
 ;build_dir       = BlinkingLight_Build
 ;for Blinking_Light2
-;build_dir       = Blinking_Light2_Build
+build_dir       = Blinking_Light2_Build
 ;for Blinking_Light3
 ;build_dir       = Blinking_Light3_Build
 ;for Button_Light
@@ -54,6 +54,7 @@ default_src_filter  =
     -<F4-Backup-firmware-files>
     -<F1-Backup-firmware-files>
     -<L4-Backup-firmware-files>
+    -<AdditionalFilesForDebuggingOnWindows10>
 ;
 ; For Both Linux and Windows 10:
 build_flags =
@@ -64,7 +65,6 @@ build_flags =
     ;https://gcc.gnu.org/onlinedocs/gcc/Debugging-Options.html for gcc options
     -O0 -g3 -ggdb3 -falign-functions=4
     ; for BOTH Linux and Windows 10:
-    -DUSE_STDPERIPH_DRIVER
     -DUSE_FULL_ASSERT
 #
 #
@@ -85,7 +85,7 @@ board_build.ldscript    = "STM32F100RBHX_FLASH_MOD.ld"
                             ; beginning of not used section
 ;build_unflags           = -mcpu=cortex-m3
                             ; end of not used section
-build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB
+build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB -DUSE_STDPERIPH_DRIVER
                             ; beginning of not used section
                             ;-mcpu=cortex-m4
                             ; end of not used section
@@ -177,6 +177,12 @@ debug_init_break        = break main.c:74 if counter32 > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
+  define pio_reset_halt_target
+      monitor reset
+  end
+  define pio_reset_run_target
+      monitor reset
+  end
   target extended-remote $DEBUG_PORT
   monitor reset
   $LOAD_CMDS
@@ -196,7 +202,7 @@ lib_compat_mode         = off
 ;This projects link script file (.ld) for STM32F407VGT6, 1024KiB of FLASH or 1048576 or 0x100000; bootloader: 0x08000000 - 0x08007FFF; firmware: 0x08008000 - 0x08100000
 board_build.ldscript    = "STM32F407VGTX_FLASH.ld"
 ;
-build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_F407VG
+build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_F407VG -DUSE_STDPERIPH_DRIVER
                             ; beginning not used section
                             ;-mcpu=cortex-m4 -mthumb
                             ;-std=gnu++14
@@ -283,6 +289,12 @@ debug_init_break        = break main.c:169
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
+  define pio_reset_halt_target
+      monitor reset
+  end
+  define pio_reset_run_target
+      monitor reset
+  end
   target extended-remote $DEBUG_PORT
   monitor reset
   $LOAD_CMDS
@@ -303,7 +315,7 @@ lib_compat_mode         = off
 ;This projects link script file (.ld) for STM32F407VGT6
 board_build.ldscript    = "STM32F407VGTX_FLASH.ld"
 ;
-build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_F407VG
+build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_F407VG -DUSE_STDPERIPH_DRIVER
                             ; beginning of not used section
                             ;-mcpu=cortex-m4 -mthumb
                             ;-std=gnu++14
@@ -387,6 +399,12 @@ debug_init_break        = break inc if i > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
+  define pio_reset_halt_target
+      monitor reset
+  end
+  define pio_reset_run_target
+      monitor reset
+  end
   target extended-remote $DEBUG_PORT
   monitor reset
   $LOAD_CMDS
@@ -405,17 +423,26 @@ lib_ldf_mode            = off
 lib_compat_mode         = off
 ;This projects link script file (.ld) for STM32L433RC has 256KB FLASH or 262144 or 0x40000,
 ;
-board_build.ldscript    = "STM32xxxxxx_FLASH_MOD.ld"
+board_build.ldscript    = "STM32L433RCTx_FLASH.ld"
 ;
                             ; beginning of not used section
-;build_unflags           = -mcpu=cortex-m3
+;build_unflags              = -mcpu=cortex-m3
                             ; end of not used section
-build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL -DSTM32_F100RB
+build_flags             = ${common.build_flags} -DSTM32L433xx
+                            ; enable the below item if the LL (Low Level) drivers are used
+                            ;-DUSE_FULL_LL_DRIVER
+                            ; enable the below two items if HAL_GPIO or HAL_RCC drivers are used
+                            -DHAL_MODULE_ENABLED
+                            -DHAL_GPIO_MODULE_ENABLED
+                            -DHAL_RCC_MODULE_ENABLED
+                            -DHAL_CORTEX_MODULE_ENABLED
                             ; beginning of not used section
                             ;-mcpu=cortex-m4
                             ; end of not used section
-                            -I".pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/CMSIS/Device/ST/STM32L4xx/include"
+                            -I".pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/Device/ST/STM32L4xx/include"
+                            -I".pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/include"
                             -I".pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/inc"
+                            -I".pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/BSP/STM32L4xx_Nucleo"
                             -I"."
                             ; beginning of not used section
                             ;
@@ -428,26 +455,36 @@ build_flags             = ${common.build_flags} -DSTM32F100xB -DSTM32F10X_MD_VL 
 src_filter              = ${common.default_src_filter}
                             ;
                             ;for Both Linux and Windows
-                            +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod>
                             -<STM32VLDiscovery-board-original-SW/GPIOToggle>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/xxxxxxx>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/CMSIS/Device/ST/STM32L4xx>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/_htmresc>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src>
-                            -<STM32VLDiscovery-board-original-SW/GPIOToggle/stm32f10x_it.c>
+                            +<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/_htmresc>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Middlewares>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/NUCLEO-L433RC-P-Backup-bootloader-and-firmware>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Projects/NUCLEO-L433RC-P>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src>
                             ;
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Libraries/CMSIS/Device/ST/STM32L4xx/xxxxxxx>
-                            ; place a "+" (plus) sign in front of next statement to enable the STM32 Std Peripheral Library or place a "-" (minux) sign in front to disable the STM32 Std Peripheral Library
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxxstm32f10x_exti.c>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxmisc.c>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_usart.c>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_gpio.c>
-                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/src/xxxstm32f10x_rcc.c>
+                            ; place a "+" (plus) sign in front of next statement to enable the STM32 HAL Library xxxx.c source code file or place a "-" (minux) sign in front to disable the STM32 HAL Library xxxx.c source code file
+                            ;Low Level (ll) driver source code, Ensure you enable the build flag -DUSE_FULL_LL_DRIVER:
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_exti.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_utils.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_usart.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rcc.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.c>
+                            ;HAL drvier (HAL) source code, Ensure you enable the build flag -DHAL_GPIO_MODULE_ENABLED etc:
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/BSP/stm32l4xx_nucleo.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_exti.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gpio.c>
+                            -<.pio/nucleo_l433rc_p/STM32L4xx_StdPeriph_Lib_V1.16.0_mod/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc.c>
                             -<Library>
                             ;
-                            +<Demo>
+                            -<Demo>
                             -<BlinkingLight>
-                            -<Blinking_Light2>
+                            +<Blinking_Light2>
                             -<Blinking_Light3>
                             -<Button_Light>
                             ;This is GPIO_IOToggle
@@ -478,11 +515,11 @@ debug_server =
   C:\ST\STM32CubeIDE_1.5.1\STM32CubeIDE\plugins\com.st.stm32cube.ide.mcu.externaltools.stlink-gdb-server.win32_1.5.0.202011040924\tools\bin\ST-LINK_gdbserver.bat
 
 ;for Demo
-debug_init_break        = break inc if i > 40
+;debug_init_break        = break inc if i > 40
 ;for BlinkingLight
-;debug_init_break        = break inc if n > 40
+;debug_init_break        = break main.c:211 if n > 40
 ;for Blinking_Light2
-;debug_init_break        = break inc if ledval > 40
+debug_init_break        = break inc if ledval > 40
 ;for Blinking_Light3
 ;debug_init_break        = break inc if ledval > 40
 ;for Button_Light
@@ -494,10 +531,17 @@ debug_init_break        = break inc if i > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
+  define pio_reset_halt_target
+      monitor reset
+  end
+  define pio_reset_run_target
+      monitor reset
+  end
   target extended-remote $DEBUG_PORT
   monitor reset
   $LOAD_CMDS
   $INIT_BREAK
+  ;monitor reset
 #
 #
 #
@@ -601,6 +645,12 @@ debug_init_break        = break main.c:xxxxx if xxxxxxx > 40
 debug_load_mode         = always
 debug_load_cmds         = preload
 debug_init_cmds =
+  define pio_reset_halt_target
+      monitor reset
+  end
+  define pio_reset_run_target
+      monitor reset
+  end
   target extended-remote $DEBUG_PORT
   monitor reset
   $LOAD_CMDS
