--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ libdeps_dir     = .pio
 ;
 ;
 ;default_envs    = disco_f100rb
-;default_envs    = disco_f407vg
-default_envs     = nucleo_l433rc_p
+default_envs    = disco_f407vg
+;default_envs     = nucleo_l433rc_p
 ;default_envs     = nucleo_f767zi
 ;
 ;for Original-disco_f407vg enviroment ONLY -- compile for Demo proj used to upload the default demo proj that came with the board
@@ -131,11 +131,11 @@ src_filter              = ${common.default_src_filter}
                             ;
                             -<Demo>
                             -<BlinkingLight>
-                            -<Blinking_Light2>
+                            +<Blinking_Light2>
                             -<Blinking_Light3>
                             -<Button_Light>
                             ;This is GPIOToggle
-                            +<STM32VLDiscovery-board-original-SW/GPIOToggle>
+                            -<STM32VLDiscovery-board-original-SW/GPIOToggle>
 lib_deps                = STM32F10x_StdPeriph_Lib_V3.5.0_mod = https://github.com/GadgetAngel/STM32F10x_StdPeriph_Lib_V3.5.0_mod.git
 lib_ignore              = STM32F10x_StdPeriph_Lib_V3.5.0_mod
 lib_archive             = no
@@ -214,7 +214,7 @@ build_flags             = ${common.build_flags} -DSTM32F4 -DSTM32F407xx -DSTM32_
                             -I"."
                             ;
                             ; Only use for "GPIO_IOToggle program"
-                            -I"GPIO_IOToggle"
+                            ;-I"GPIO_IOToggle"
                             ;
                             ; beginning of not used section
                             ;for Both Windows and Linux:
@@ -245,10 +245,10 @@ src_filter              = ${common.default_src_filter}
                             -<Library>
                             -<Demo>
                             -<BlinkingLight>
-                            -<Blinking_Light2>
+                            +<Blinking_Light2>
                             -<Blinking_Light3>
                             -<Button_Light>
-                            +<GPIO_IOToggle>
+                            -<GPIO_IOToggle>
 lib_deps                = STM32F4xx_StdPeriph_Lib_V1.8.0_mod = https://github.com/GadgetAngel/STM32F4xx_StdPeriph_Lib_V1.8.0_mod.git
 lib_ignore              = STM32F4xx_StdPeriph_Lib_V1.8.0_mod
 lib_archive             = no
